--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <img src="ducky.jpg" alt="Quack"width="500" height="400">
 
-<p> <a href="<p> <a href="2index.html">CLICK HERE</a> if you want to see my bestie Little Jimmy </p>
+<p> <a href="2index.html">CLICK HERE</a> if you want to see my bestie Little Jimmy </p>
 
 
 </body>
