--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
 
-<h1> Ducky </h1>
+<h1> <p class="double">Ducky </p></h1> 
+<p class="double">A double border.<p Ducky </h1>
 <p> Hello everyone I'm Ducky </p>
 
 <img src="ducky.jpg" alt="Quack"width="500" height="400">
