--- a/5index.html
+++ b/5index.html
@@ -13,9 +13,8 @@ p.round3 {
   border-color: #f9f9f9;
   border-radius: 12px;
   padding: 6px;
-  margin-top: 0px;
   margin-bottom: 100px;
-  margin-right: 60px;
+  margin-right: 600px;
   margin-left: 80px;
 }
 h2{
@@ -30,13 +29,9 @@ h2{
 <body>
 
 
-<h2 <p style="font-size:50px;color:blue;">Fun Fact</p></h2>
+<h2 <p style="font-size:50px;color:blue;"></p></h2>
 
-<p class="round3"<p style="font-size:25px;color:#ff6700;"> Ducks can see well underwater.
-Ducks eat grain, seeds, nuts, fruit, insects, water plants and even small fish.
-Ducks are social. They live in groups called rafts or teams.
-Male ducks are called drakes. Females are called hens. Babies are ducklings.
-</p>
+<p class="round3">Have you seen Little Jimmy</p>
 
 
 
@@ -49,7 +44,7 @@ Male ducks are called drakes. Females are called hens. Babies are ducklings.
 <style>
 div.relative {
   position: relative;
-  height: 100px;
+  height: 200px;
   width: 300px;
   left: 600px;
   border: 3px solid #f9f9f9;
@@ -61,7 +56,7 @@ div.relative {
 
 
 <div class="relative">
-<p style="font-size:30px;color:yellow;">Thanks for saving me </p>
+<p style="font-size:30px;color:yellow;">Hmmmm.... The last place I saw him was the pond </p>
 </div>
 
 </body>
@@ -134,13 +129,9 @@ a {
 <div style= "position:absolute; top:800px;left:700px">
 
 
-<a href="5index.html">ask if seen Little Jimmy</a>
+<a href="6index.html">Head to pond</a>
 </div>
 </body>
 
 
 </html>
-
-
-
-
