--- a/9index.html
+++ b/9index.html
@@ -141,6 +141,6 @@ a {
 <div style= "position:absolute; top:150px;left:950px">
 
 
-<a href="index.html">START AGAIN</a>
+<a href="6index.html">START AGAIN</a>
 </div>
 </body>
