--- a/10index.html
+++ b/10index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -24,7 +24,7 @@ h1 {
 </head>
 <body>
 
-<h1>Thank you guys fo helping duck find me, with out you I would have been ghost jimmy</h1>
+<h1>Thank you guys for helping duck find me, without you I would have been ghost jimmy</h1>
 
 
 </body>
