--- a/10index.html
+++ b/10index.html
@@ -157,7 +157,7 @@ a {
 </body>
 <div style= "position:absolute; top:500px;left:900px">
 
-<a href="1index.html">PLAY AGAIN?</a>
+<a href="index.html">PLAY AGAIN?</a>
 </div>
 </body>
 
