--- a/6index.html
+++ b/6index.html
@@ -165,7 +165,7 @@ h1 {
 <div class="btn-group">
   <button><a href="7index.html">leaf</a>  </button>
   <button><a href="8index.html">can</a> </button>
-  <button><a href="9index.html">soda ring</a> rind</button>
+  <button><a href="9index.html">soda ring</a> </button>
 </div>
 
 </body>
