--- a/diyps.html
+++ b/diyps.html
@@ -9,7 +9,7 @@
 <p>This is a paragraph.</p>
 
 
-<iframe src="diy/diyindex.html" height="600" width="600" title="diy"></iframe>
+<iframe src="diy/index.html" height="600" width="600" title="diy"></iframe>
 
 
 </body>
