--- a/diyps.html
+++ b/diyps.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>fruit with fruit </h1>
+<p>.</p>
 
 
 <iframe src="diy/index.html" height="600" width="600" title="diy"></iframe>
