--- a/portfolio/SWglitch.html
+++ b/portfolio/SWglitch.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SWglitch</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>SWglitch</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -75,7 +75,7 @@ img {
 
 <center><h1>Glitch art </h1></center>
 
-<center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Main</button></a></center>
+<center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Home</button></a></center>
 
 <center><p>With these piece I used 2 different methods to create these glitch effects "text edit/ databending and audacity.</p></center>
 
