--- a/portfolio/SWglitch.html
+++ b/portfolio/SWglitch.html
@@ -77,7 +77,7 @@ img {
 
 <center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Home</button></a></center>
 
-<center><p>With these piece I used 2 different methods to create these glitch effects "text edit/ databending and audacity.</p></center>
+<center><p>With these piece I used 2 different methods to create these glitch effects "text edit/ databending and audacity".</p></center>
 
 <center><h3> Piece #1</h3></center>
 <center><p> -All Eyes On Gary-</p></center>
