--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -20,7 +20,7 @@
         <a class="nav-link" href="SWmeme.html">Meme Mash up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
+        <a class="" href="#">p5js selfie</a>
       </li>
     </ul>
   </div>
