--- a/portfolio/SWselfie.html
+++ b/portfolio/SWselfie.html
@@ -13,11 +13,11 @@ img {
 </head>
 <body>
 
-<center><h2>Meme Mashup</h2></center>
+<center><h2>P5.JS - Selfie</h2></center>
 <center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Home</button></a></center>
 <center><p>I creating this meme mashup with the thought of wanting to turn my two favorite interest and mashing them, but it wasn't until I put them together that I realized how similar they were. </p></center>
 
-<img src="" alt="sus" style="width:65%;">
+<img src="selfie.png" alt="sus" style="width:65%;">
 
 </body>
 </html>
