--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -22,6 +22,9 @@
       <li class="nav-item">
         <a class="nav-link" href="SWselfie.html">p5js selfie</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="SWdiy.html">diy photoshop</a>
+      </li>
     </ul>
   </div>
  </nav>
