--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -20,10 +20,13 @@
         <a class="nav-link" href="SWmeme.html">Meme Mash up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="SWselfie.html">p5js selfie</a>
+        <a class="nav-link" href="SWselfie.html">Selfie</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="SWdiy.html">diy photoshop</a>
+        <a class="nav-link" href="SWdiy.html">Photoshop</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="SWnet.html">Net aArt</a>
       </li>
     </ul>
   </div>
