--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="SWnet.html">Net aArt</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="SWmine.html">Minecraft(soon to come)</a>
+      </li>
     </ul>
   </div>
  </nav>
@@ -38,3 +41,13 @@
 
 </body>
 </html>
+
+<html>
+<head>
+
+<center><img src="amongus squid game.jpg" alt="sus" style="width:65%;"></center>
+
+
+</body>
+</html>
+
