--- a/P5game/index.html
+++ b/P5game/index.html
@@ -5,7 +5,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5game.js"></script>
+  <script language="javascript" type="text/javascript" src="p5js-temp-p5game16273972415857632367.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
