--- a/portfolio/Ducky.html
+++ b/portfolio/Ducky.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body {
+  background-color:ivory;
+}
+</style>
+</head>
+<body>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
 <title>Emotional support duck</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 img {
   display: block;
   margin-left: auto;
@@ -14,6 +27,100 @@ img {
 <body>
 
 <center><h2>Hello</h2></center>
-<center><p>. </p></center>
+<center><p>I hope you have a wonderful day</p></center>
+<center><p>click my seed to change my text</p></center>
+<center><p>Scroll all the way down if you need some one to talk to </p></center>
 
-<center><iframe src="https://sherrwong.github.io/final DP/finalP/index.html" height="600" width="600" title="Iframe Example"></iframe></center>
+<center><iframe src="https://sherrwong.github.io/final%20DP/finalP/index.html" height="600" width="600" title="duck"></iframe></center>
+
+<center><p>Here is a number to call if you need to talk to someone</p></center>
+<center><p>-(866) 488-7386-</p></center>
+<center><p>Or click the button below if you don't want to call</p></center>
+
+<html>
+<head>
+<style>
+a:link, a:visited {
+  background-color: #FFFF66;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color: red;
+}
+</style>
+</head>
+<body>
+
+<center><a href="https://www.thetrevorproject.org/get-help/?gclid=Cj0KCQjw1ZeUBhDyARIsAOzAqQJ3WOYpxrWa2O0tUxBeysn9myg4dw7Ek-FgnzferVsqKDPvgbu-IwwaAiXuEALw_wcB" target="_blank">Button</a></center>
+
+</body>
+</html>
+
+<h3>Heres the CODE if you wanna try making your own:</h3>
+<pre>
+let cards = []; // CREATE AN EMPTY ARRAY TO STORE VARIABLES
+let numCards = 13;
+
+//LOAD IMAGES BEFORE THE PROGRAM RUNS
+function preload() {
+  
+  //least efficient way, but most straightforward way
+  let card1 = loadImage('https://sherrwong.github.io/final DP/T1.png'); // store image in a variable
+  let card2 = loadImage('https://sherrwong.github.io/final DP/T2.png');
+  let card3 = loadImage('https://sherrwong.github.io/final DP/T3.png');
+  let card4 = loadImage('https://sherrwong.github.io/final DP/t4.png');
+  let card5 = loadImage('https://sherrwong.github.io/final DP/t5.png');
+  let card6 = loadImage('https://sherrwong.github.io/final DP/t6.png');
+  let card7 = loadImage('https://sherrwong.github.io/final DP/t7.png');
+  let card8 = loadImage('https://sherrwong.github.io/final DP/t8.png');
+  let card9 = loadImage('https://sherrwong.github.io/final DP/t9.png');
+  let card10 = loadImage('https://sherrwong.github.io/final DP/t10.png');
+  let card11 = loadImage('https://sherrwong.github.io/final DP/t11.png');
+  let card12 = loadImage('https://sherrwong.github.io/final DP/t12.png');
+  let card13 = loadImage('https://sherrwong.github.io/final DP/t13.png');
+  
+  cards = [card1,card2,card3,card4,card5,card6,card7,card8,card9,card10,card11,card12,card13]; // store variables in an array, see top
+
+  
+}
+
+function draw() {
+  background(255);
+  
+  //draw the image from the center of the image
+  imageMode(CENTER);
+  // image(img, 10, 10, 50, 50);
+  
+  //store random image in a variable
+  let randoImg = random(cards);
+  //the array is put into the random function, it will choose one index value at random
+  
+ 
+  image(randoImg, width / 2, height / 2);
+  
+} 
+var button;
+
+function setup() {
+  createCanvas(600, 600);
+  background(255);
+  button = createImg('https://sherrwong.github.io/final DP/pduck.png');
+  button.position(100, 200);
+  button.mousePressed(changeBG);
+  noLoop();
+  
+}
+
+function changeBG() {
+  var val = random(205);
+  background(val);
+  draw();
+}
+
+</pre>
+
