--- a/portfolio/SWFP.html
+++ b/portfolio/SWFP.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body {
-  background-color:ivory;
-}
-</style>
-</head>
-<body>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-<title>Emotional support duck</title>
+<title>SWFP</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-
 img {
   display: block;
   margin-left: auto;
@@ -26,38 +13,16 @@ img {
 </head>
 <body>
 
-<center><h2>Hello</h2></center>
-<center><p>Pleasure to meet you -quack-</p></center>
-<center><p>Click my seed to reading something that might your day, as well as some friendly reminders.</p></center>
-<center><p>Scroll all the way down if you need some one to talk to </p></center>
+<center><h2>My Art 74 Final Project</h2></center>
+<center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Home</button></a></center>
+<center><p>For my final project in this class I wanted to make a duck that when you click on the duck it will pop up a inspirational, motivational, or caring message. As well as daily reminders to drink water or to stretch. My inspiration to create this type of web to help those who are in a need of something that would brighten someones day. I also linked other websites that can further help people. </p></center>
 
-<center><iframe src="https://sherrwong.github.io/final%20DP/finalP/index.html" height="600" width="600" title="duck"></iframe></center>
+<center><a href='Ducky.html'><button type="button" class="btn btn-primary btn-lg">Ducky</button></a></center>
 
-<center><p>Here is a number to call if you need to talk to someone</p></center>
-<center><p>-(866) 488-7386-</p></center>
-<center><p>Or click the button below if you don't want to call, there is always someone there to listen.</p></center>
+<img src="swfp.png" alt="sus" style="width:30%;">
 
-<html>
-<head>
-<style>
-a:link, a:visited {
-  background-color: #FFFF66;
-  color: black;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
-a:hover, a:active {
-  background-color: red;
-}
-</style>
-</head>
-<body>
-
-<center><a href="https://www.thetrevorproject.org/get-help/?gclid=Cj0KCQjw1ZeUBhDyARIsAOzAqQJ3WOYpxrWa2O0tUxBeysn9myg4dw7Ek-FgnzferVsqKDPvgbu-IwwaAiXuEALw_wcB" target="_blank">Button</a></center>
-
+</body>
+</html>
 </body>
 </html>
 
@@ -122,5 +87,4 @@ function changeBG() {
   draw();
 }
 
-
-
+</pre>
