--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -31,6 +31,9 @@
       <li class="nav-item">
         <a class="nav-link" href="SWmine.html">Minecraft(soon to come)</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="">Net aArt</a>
+      </li>
     </ul>
   </div>
  </nav>
