--- a/portfolio/SWnet.html
+++ b/portfolio/SWnet.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body {
+  background-color:ivory;
+}
+</style>
+</head>
+<body>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
 <title>SWnet</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
