--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-color:ivory;
+}
+</style>
+</head>
+</body>
+</html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>SWPortfolio</title>
@@ -26,13 +37,13 @@
         <a class="nav-link" href="SWdiy.html">Photoshop</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="SWnet.html">Net aArt</a>
+        <a class="nav-link" href="SWnet.html">Net Art</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="SWmine.html">Minecraft(soon to come)</a>
+        <a class="nav-link" href="SWmine.html">Minecraft</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Net aArt</a>
+        <a class="nav-link" href="SWFP.html">Final Project</a>
       </li>
     </ul>
   </div>
