--- a/portfolio/SWportfolio.html
+++ b/portfolio/SWportfolio.html
@@ -40,7 +40,7 @@ body {
         <a class="nav-link" href="SWnet.html">Net Art</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="SWmine.html">Minecraft</a>
+        <a class="nav-link" href="SWmc.html">Minecraft</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="SWFP.html">Final Project</a>
