--- a/portfolio/SWFP.html
+++ b/portfolio/SWFP.html
@@ -29,7 +29,7 @@ img {
 <center><a href='SWportfolio.html'><button type="button" class="btn btn-primary btn-lg">Home</button></a></center>
 <center><p>For my final project in this class I wanted to make a duck that when you click on the duck it will pop up a inspirational, motivational, or caring message. As well as daily reminders to drink water or to stretch. My inspiration to create this type of web to help those who are in a need of something that would brighten someones day. I also linked other websites that can further help people. </p></center>
 
-<center><a href='Ducky.html'><button type="button" class="btn btn-primary btn-lg">Ducky</button></a></center>
+<center><a href='https://sherrwong.github.io/final DP/Ducky.html'><button type="button" class="btn btn-primary btn-lg">Ducky</button></a></center>
 
 <img src="swfp.png" alt="sus" style="width:30%;">
 
