--- a/final DP/Ducky.html
+++ b/final DP/Ducky.html
@@ -58,6 +58,26 @@ a:hover, a:active {
 
 <center><a href="https://www.thetrevorproject.org/get-help/?gclid=Cj0KCQjw1ZeUBhDyARIsAOzAqQJ3WOYpxrWa2O0tUxBeysn9myg4dw7Ek-FgnzferVsqKDPvgbu-IwwaAiXuEALw_wcB" target="_blank">Button</a></center>
 
+
+
 </body>
 </html>
+<html>
+<head>
+<style>
+
+p {
+  font-size: 0.875em;
+}
+</style>
+</head>
+<body>
+
+<p>Art by Sherry wong</p>
+
+</body>
+</html>
+
+
+
 
